# agentic-ai-exploration

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
api/: main.py  schemas.py
api/routers/: chat_agent.py  orchestrator_synthesizer_agent.py  parallel_processing_agent.py  prompt_chaining_agent.py
api/services/: generic_agent_service.py
core/agents/: react_agent.py
core/base/: agent.py  llm_wrapper.py
core/llms/: local_ollama_llm_wrapper.py
services/: orchestrator_synthesizer_service.py  parallel_prompting_service.py  prompt_chaining_service.py
tests/integration/api/routers/: test_chat_agent.py
tests/unit/api/services/: test_generic_agent_service.py
