[project]
name = "agentic-ai-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.11",
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint>=4.0.1",
    "pytest>=9.0.2",
]

[tool.fastapi]
entrypoint = "api.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]